--- a/index.html
+++ b/index.html
@@ -53,6 +53,22 @@
 					<li>Выложить доступ прототипа приложения на GitHub</li>
 				</ol>
 			</div>
+			<div><h4>Выполнение работы:</h4></div>
+			<div>
+				<ol>
+					<li>Сформирована команда для разработки проекта (<b>Fanta</b>).</li>
+					<li>
+						<b>Роли команды:</b>
+						<ul>
+							<li>Антонов И.М. - РП, СП, ПП</li>
+							<li>Смоленский В.Д. - ВН, БА, ПП</li>
+							<li>Копустников В.А. - СП, КО, ПП</li>
+						</ul>
+					</li>
+					<li>...</li>
+					<li>...</li>
+				</ol>
+			</div>
 			
         </div>
 
