--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
 					<li>Сформировать команду для разработки проекта.</li>
 					<li>Определить роли команды.</li>
 					<li>Разработать прототип приложения.</li>
-					<li>Выложить доступ прототипа приложения на GitHub</li>
+					<li>Разработать презентацию-лендинг приложения.</li>
+					<li>Выложить доступ к лендингу приложения на GitHub</li>
 				</ol>
 			</div>
 			<div><h4>Выполнение работы:</h4></div>
@@ -65,8 +66,10 @@
 							<li>Копустников В.А. - СП, КО, ПП</li>
 						</ul>
 					</li>
-					<li>...</li>
-					<li>...</li>
+					<li>Выбрана тема проекта - Корпоративный сайт для сервиса по ремоту цифровой техники </li>
+					<li>Выбраны технологии для реализации - HTML5, CSS3, JQuery, Sublime Text</li>
+					<li>Разработан макет веб-приложения - MexServise</li>
+					<li>Создана презентация-лендинг проекта - <a href="https://mexservise.github.io">MexServise</a></li>
 				</ol>
 			</div>
 			
@@ -76,6 +79,32 @@
 
         <div>
             <h3>Лабораторная работа № 3</h3>
+            <div style="margin-top:10px"><h4>Задачи:</h4>
+				<ol>
+					<li>Выполнить задание в системе Cisco Packet Tracer.</li>
+					<li>Оформить отчёт на своей страничке.</li>
+					
+				</ol>
+			</div>
+			<div><h4>Выполнение работы:</h4></div>
+			<div>
+				<ol>
+					<li>Был выбран вариант 4:
+					<p align="center">	<img src="images/1.png"></p>
+					</li>
+					<li>Создана сеть из двух компьютеров и коммутатора (Добавлена LAN A - subnet:10.1.255.0, mask:255.255.255.224):
+					<p align="center">	<img src="images/2.png"></p>
+					</li>
+					<li>Создана сеть из четырёх компьютеров и двух коммутаторов (Добавлена LAN B - subnet:10.1.254.0, mask:255.255.255.0), Данная сеть не будет работать, т.к. для объединения разных сетей нужен маршрутизатор
+					</li>
+					<li>Создана сеть из четырёх компьютеров, двух коммутаторов и маршрутизатора:
+					<p align="center">	<img src="images/4.png"></p>
+					</li>
+					<li>СК существующей сети подключена дополнительная, включающая в себя коммутатор и компьютер (Добавлена LAN C - subnet:10.1.253.0, mask:255.255.255.0) :
+					<p align="center">	<img src="images/5.png"></p>
+					</li>
+				</ol>
+			</div>
 	    </div>			
 
 </body>
